# irate

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  README.org
benchmark/: CMakeLists.txt  enumerate.cpp  product.cpp  range.cpp  zip.cpp
cmake/: add_basic_warnings.cmake
include/: irate.hpp
include/irate/: enumerate.hpp  product.hpp  range.hpp  zip.hpp
include/irate/detail/: dereference.hpp  enumerate.hpp  product.hpp  range.hpp  zip.hpp
test/: CMakeLists.txt  enumerate.cpp  product.cpp  range.cpp  zip.cpp
